--- a/index.html
+++ b/index.html
@@ -6,14 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/4677aa2d40.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <title>CO.ME.PRO | SINDICATO</title>
+    <script src="https://kit.fontawesome.com/4677aa2d40.js" crossorigin="anonymous"></script>
+    <title>CO.EMP.PRO | SINDICATO</title>
 </head>
 
 <body>
-
+    <nav id="main-nav">
+        <div class="container">
+            <img src="img/logo.png" alt="CO.EM.PRO" class="logo">
+            <div class="social">
+                <a href="http://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-square fa-2x"></i></a>
+                <a href="http://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a>
+                <a href="http://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
+                <a href="http://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube fa-2x"></i></a>
+            </div>
+            <ul>
+                <li><a class="current" href="index.html">Inicio</a></li>
+                <li><a href="about.html">CO.EM.PRO</a></li>
+            </ul>
+        </div>
+    </nav>
 </body>
 
 </html>
