--- a/index.html
+++ b/index.html
@@ -5,30 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
 
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <script src="https://kit.fontawesome.com/4677aa2d40.js" crossorigin="anonymous"></script>
-    <title>CO.EMP.PRO | SINDICATO</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="css/utilities.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>CO.ME.PRO</title>
 </head>
 
-<body>
-    <nav id="main-nav">
-        <div class="container">
-            <img src="img/logo.png" alt="CO.EM.PRO" class="logo">
-            <div class="social">
-                <a href="http://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook-square fa-2x"></i></a>
-                <a href="http://www.twitter.com" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a>
-                <a href="http://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
-                <a href="http://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube fa-2x"></i></a>
-            </div>
-            <ul>
-                <li><a class="current" href="index.html">Inicio</a></li>
-                <li><a href="about.html">CO.EM.PRO</a></li>
-            </ul>
+<body id="home">
+    <header class="hero">
+        <div id="navbar" class="navbar">
+            <!-- <img src="images/logo.png" alt="" class="logo-icon"> -->
+            <h1 class="logo">
+                <span class="text-secundary">CO.ME.PRO.</span>
+            </h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Inicio</a></li>
+                    <li><a href="#about">El Gremio</a></li>
+                    <li><a href="#news">Noticias</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#contact">Contacto</a></li>
+                </ul>
+            </nav>
         </div>
-    </nav>
+
+        <div class="content">
+            <h1><span class="text-logo-1">CO.</span><span class="text-logo-2">ME.</span><span
+                    class="text-logo-3">PRO</span></h1>
+            <p>Trabajo digno y justicia social</p>
+            <!-- <a href="#about" class="btn"><i class="fas fa-chevron-right"></i> Más Información</a> -->
+        </div>
+    </header>
 </body>
 
 </html>
