--- a/index.html
+++ b/index.html
@@ -18,28 +18,83 @@
 <body id="home">
     <header class="hero">
         <div id="navbar" class="navbar">
-            <!-- <img src="images/logo.png" alt="" class="logo-icon"> -->
-            <h1 class="logo">
-                <span class="text-secundary">CO.ME.PRO.</span>
-            </h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Inicio</a></li>
-                    <li><a href="#about">El Gremio</a></li>
-                    <li><a href="#news">Noticias</a></li>
-                    <li><a href="#blog">Blog</a></li>
-                    <li><a href="#contact">Contacto</a></li>
-                </ul>
-            </nav>
+            <div>
+                <video class="video-logo" src='../images/home/logo.mp4' muted autoplay></video>
+            </div>
+            <div>
+                <h1 class="logo"><span class="text-secundary">CO.ME.PRO.</span>
+                    <!-- <span class="text-logo-1">CO.</span><span class="text-logo-2">ME.</span><span
+                        class="text-logo-3">PRO.</span> -->
+                </h1>
+            </div>
+
+            <div>
+                <nav>
+                    <ul>
+                        <li><a href="#home">Inicio</a></li>
+                        <li><a href="#about">El Gremio</a></li>
+                        <li><a href="#news">Noticias</a></li>
+                        <li><a href="#blog">Blog</a></li>
+                        <li><a href="#contact">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+
+
         </div>
+
+        <!-- Main content -->
+        <!-- <h1><span class="text-logo-1">CO.</span><span class="text-logo-2">ME.</span><span
+                class="text-logo-3">PRO.</span></h1> -->
+        <!-- <p>Trabajo digno y justicia social</p> -->
 
         <div class="content">
             <h1><span class="text-logo-1">CO.</span><span class="text-logo-2">ME.</span><span
-                    class="text-logo-3">PRO</span></h1>
-            <p>Trabajo digno y justicia social</p>
-            <!-- <a href="#about" class="btn"><i class="fas fa-chevron-right"></i> Más Información</a> -->
+                    class="text-logo-3">PRO.</span></h1>
+            <!-- <h1><span class="text-logo-2">Trabajo digno y justicia social</span></h1> -->
+            <a href="#about" class="btn"><i class="fas fa-chevron-right"></i> Más Información</a>
         </div>
     </header>
+
+    <!-- Blog -->
+    <section id="blog" class="blog flex-columns flex-reverse">
+        <div class="row">
+            <div class="column">
+                <div class="column-1">
+                    <img src="images/home/blog.jpg" alt="" />
+                </div>
+            </div>
+            <div class="column">
+                <div class="column-2 bg-secondary">
+                    <h4>April 16 2020</h4>
+                    <h2>Blog Post One</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+                        illum, animi earum ea amet sequi reiciendis sit corporis sunt
+                        iusto cupiditate odio maxime adipisci cumque eligendi nemo
+                        dolore id itaque?
+                    </p>
+                    <a href="blog.html" class="btn btn-outline">
+                        <i class="fas fa-chevron"></i>
+                        Read Our Blog
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <footer class="footer bg-dark">
+        <div class="social">
+            <a href="#"><i class="fab fa-facebook fa-3x"></i></a>
+            <a href="#" id="instagram-color"><i class="fab fa-instagram fa-3x"></i></a>
+            <a href="#"><i class="fab fa-twitter fa-3x"></i></a>
+            <a href="#" id="youtube-color"><i class="fab fa-youtube fa-3x"></i></a>
+
+        </div>
+        <p>Copyright &copy; 2022 - mrlG Technologies</p>
+    </footer>
 </body>
 
 </html>
