--- a/blog.html
+++ b/blog.html
@@ -81,7 +81,7 @@
                 <strong>Jane Doe</strong> | April 21 2020
               </p>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+                Lorem ipsum dolor sit amet, elit consectetur adipisicing elit. Alias
                 illum, animi earum ea amet sequi reiciendis sit corporis sunt
                 iusto cupiditate odio maxime adipisci cumque eligendi nemo
                 dolore id itaque?
